fix: hide overflow while dragging cards

--- a/runtime/styles.css
+++ b/runtime/styles.css
@@ -2,6 +2,7 @@
 
 .cf-tinder-grid__answers {
     position: relative;
+    overflow: hidden;
 }
 
 .cf-tinder-grid-card {
